--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,5 +1,10 @@
-.navbarblocknavbarblock{
-    display: block;
+.navbarblock{
+    /* display: block; */
+    position: fixed;
+    top:0;
+    z-index: 100;
+    /* border:2px solid red; */
+    width:100%;
 }
 
 .navbar{
@@ -11,13 +16,14 @@
     justify-content: center;
     align-items: center;
     gap:40px;
-    position: relative;
-    top:0;
+   
+    
 }
 
 .hambueger{
     font-size: 26px;
     color:white;
+    cursor: pointer;
 }
 .inputSearch{
     width:670px;
@@ -67,6 +73,7 @@ h4{
      align-items: center;
    justify-content: center;
    gap:80px;
+   
 }  
 
  .locationdiv{
@@ -96,4 +103,49 @@ h4{
     flex-direction: column;
     margin: auto;
     width: 250px;
+}
+
+               /* slider drawer */
+
+.drawerslide>h2{
+color:white;
+}               
+
+.divone>div{
+padding:12px 16px;
+font:14px
+}
+
+.silverdiv{
+  border:2px solid rgb(121, 121, 121);
+  background-color:rgb(121, 121, 121) ;
+}
+
+.contactus>h1{
+    color:black;
+    padding: 0px 0px 12px;
+    font-weight: bold;
+    margin-top: 8px;
+    
+}
+.contactus{
+    margin: 0px 0px 10px;
+}
+
+.contactus>div{
+    padding: 0px 0px 12px;
+}
+
+.buttnslider{
+    display: flex;
+    justify-content: space-between;
+    margin: 12px 0px 10px;
+ 
+}
+
+.buttnslider>Button{
+    width:45%;
+    background-color: #008ecc;
+    color:white;
+    border:1px solid white
 }
