--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,5 +1,9 @@
-.navbarblocknavbarblock{
-    display: block;
+.navbarblock{
+    /* display: block; */
+    position: fixed;
+    top:0;
+    z-index: 100;
+    width:100%;
 }
 
 .navbar{
@@ -18,6 +22,7 @@
 .hambueger{
     font-size: 26px;
     color:white;
+    cursor: pointer;
 }
 .inputSearch{
     width:670px;
@@ -96,4 +101,90 @@ h4{
     flex-direction: column;
     margin: auto;
     width: 250px;
+}
+
+              /* slider drawer */
+
+              .drawerslide>h2{
+                color:white;
+                }               
+                
+                .divone>div{
+                padding:12px 16px;
+                font:14px
+                }
+                
+                .silverdiv{
+                  border:2px solid rgb(121, 121, 121);
+                  background-color:rgb(121, 121, 121) ;
+                }
+                
+                .contactus>h1{
+                    color:black;
+                    padding: 0px 0px 12px;
+                    font-weight: bold;
+                    margin-top: 8px;
+                    
+                }
+                .contactus{
+                    margin: 0px 0px 10px;
+                }
+                
+                .contactus>div{
+                    padding: 0px 0px 12px;
+                }
+                
+                .buttnslider{
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 12px 0px 10px;
+                 
+                }
+                
+                .buttnslider>Button{
+                    width:45%;
+                    background-color: #008ecc;
+                    color:white;
+                    border:1px solid white
+                }
+
+@media screen and (max-width: 640px){
+.inputSearch{
+    width:150px;
+    font-size: 10px;
+  
+}
+
+     .userdiv>h4{
+        font-size: 12px;
+     }
+
+     .navbar>div>img{
+       width:50px;
+     }
+
+     .navbar2style1>p{
+        font-weight: 400;
+        font-size: 12px;
+    }
+
+    .locationdiv{
+        width:55px;
+        font-weight: 400;
+        font-size: 12px;
+    } 
+
+    .locationIcon{
+        font-size: 14px;
+        
+    }
+
+    #newnav{
+       gap:10px 
+    }
+   
+    .spanstyle{
+    font-weight: 400;
+    font-size: 12px;
+    }
 }
