--- a/src/Styles/ProductDetailPage.css
+++ b/src/Styles/ProductDetailPage.css
@@ -1,74 +1,145 @@
-.main-div {
-  border: 1px solid red;
-  margin: auto;
-  width: 95%;
+.parent-wrapper{
+  width: 100%;
+  height: auto;
   padding-top: 2rem;
+  background-color: #ffff;
 }
-.first-div {
+
+.top-section-wrapper{
+  width: 90%;
+  margin: auto;
+  height: 500px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  border-bottom: 1px solid gray;
+}
+
+.bottom-section-wrapper{
+  width: 90%;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 300px;
+  border: 1px solid red;
+}
+
+.img-wrapper{
   display: flex;
 }
-.first-div-left {
-  width: 15%;
-  height: 28rem;
-  border: 1px solid green;
+
+.img-details-wrapper{
+  width: 25%;
 }
-.first-div-middle {
-  width: 60%;
-  height: auto;
-  border: 1px solid black;
-  margin: 0px 1rem;
-}
-.first-div-right {
-  width: 100%;
-  height: auto;
-  border: 1px solid goldenrod;
-}
-.left-img {
-  width: 100%;
-  padding: 0.5rem 0.2rem;
-  margin: 1rem 0rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-.arrow {
-  font-weight: bolder;
-  color: grey;
+
+.details-img{
+  width: 98%;
   margin: auto;
-  text-align: center;
-  margin-bottom: -1rem;
+  margin-top: 5%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 30%;
 }
-.marginBtm {
-  margin-top: -1rem;
+
+.main-img-wrapper{
+  width: 75%;
+  margin-left: 2%;
 }
-.left-img:hover,
-.arrow:hover {
-  cursor: pointer;
-}
-.middle-img {
+.img{
   width: 100%;
   height: 100%;
+}
+/* product details css */
+.produt-detail-wrapper{
+  padding: 3%;
+}
+
+.produt-detail-wrapper h1 {
+  font-size: 1.3rem;
+  font-weight: bolder;
+}
+
+.produt-detail-wrapper h3 {
+  color: gray;
+}
+
+.produt-detail-wrapper h2 {
+  color: green;
+  font-weight: bolder;
+}
+
+.produt-detail-wrapper p {
+  font-size: 1.1rem;
+}
+
+.payment-logo{
+  margin-top: 2%;
+  display: flex;
+}
+.payment-logo p {
+  font-size: 10px;
+  color: gray;
+}
+
+#btn {
+  width: 200px;
+  height: 30px;
+  border: none;
+  margin-top: 4%;
+  margin-bottom: 2%;
+  border-radius: 5px;
+  color: #ffff;
+  font-size: 15px;
+  background-color: #318CE7;
+}
+
+/* middle section CSS */
+.middle-section-wrapper{
+  width: 90%;
   margin: auto;
-  margin-bottom: 0rem;
-  padding: 1rem 0rem;
+  margin-top: 10px;
+  height: auto;
+  border-bottom: 1px solid gray;
 }
-.discount {
-  background-color: red;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  font-weight: 900;
-  color: white;
-  text-align: center;
-}
-.discount-div {
+
+.heading-wrapper{
   width: 100%;
-  height: 5rem;
-  padding: 1rem;
+  height: 50px;
 }
-.price {
-  display: flex;
-  gap: 2rem;
+
+.heading-wrapper h1 {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+.description-para{
+  width: 90%;
+  margin: auto;
+  margin-bottom: 10px;
+}
+
+.description-para h3 {
+  font-weight: bolder;
+}
+
+@media screen and (max-width: 640px) { 
+  .top-section-wrapper{
+    width: 90%;
+    margin: auto;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+  }
+  .img-wrapper{
+    height: 50%;
+    border-bottom: 1px solid gray;
+  }
+  .produt-detail-wrapper{
+    height: 50%;
+  }
+
+  .produt-detail-wrapper h1 {
+    font-size: 1rem;
+    font-weight: bolder;
+  }
+
 }
