--- a/src/Styles/ProductDetailPage.css
+++ b/src/Styles/ProductDetailPage.css
@@ -21,7 +21,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   height: 300px;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 .img-wrapper{
